--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "CC-BY-4.0",
   "dependencies": {
     "@fortawesome/fontawesome-free-webfonts": "1.0.8",
+    "devicons": "1.8.0",
     "reveal.js": "3.6.0",
     "reveal.js-menu": "1.1.2"
   },
